<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff4b473d">

    <!--<TextView android:text="@string/packageT" android:layout_width="fill_parent"
         android:layout_height="wrap_content" />-->

    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <!--Menu Buttons-->
    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewTitle"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/playButton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/highscoreButton"
            android:background="@drawable/button_shape_layout_selector"
            android:clickable="false"
            android:text="@string/button_play"
            android:textColor="#ff000000"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/highscoreButton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_below="@+id/playButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape_layout_selector"
            android:clickable="false"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/button_highscore"
            android:textColor="#ff000000" />

        <Button
            android:id="@+id/diePostButton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/highscoreButton"
            android:layout_below="@+id/highscoreButton"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape_layout_selector"
            android:clickable="false"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/button_post"
            android:textColor="#ff000000" />

    </RelativeLayout>

    <!--Icon Buttons-->
    <Button
        android:id="@+id/help"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/rate"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/help_animation"
        android:textColor="#ff000000" />
    <!--android:background="ffcc00"-->


    <Button
        android:id="@+id/rate"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rate_animation"
        android:textColor="#ff000000" />
    <!--android:background="@drawable/rate"-->

    <Button
        android:id="@+id/share"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/share_animation"
        android:textColor="#ff000000" />

    <Switch
        android:id="@+id/Sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:checked="true"
        android:text="@string/switch_sound" />

    <!--android:background="@drawable/share"-->

</RelativeLayout>