<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.berufsbildungscenter.packagesorter.PauseMenu">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="350dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">

            <Button
            android:id="@+id/help_pause"
            android:layout_width="60dp"
            android:layout_height="45dp"
                android:layout_marginLeft="20dp"
            android:background="@drawable/help_animation"
            android:textColor="#ff000000"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <!--android:background="ffcc00"-->


            <Button
                android:id="@+id/rate_pause"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:background="@drawable/rate_animation"
                android:textColor="#ff000000"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <!--android:background="@drawable/rate"-->

            <Button
                android:id="@+id/share_pause"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/share_animation"
                android:textColor="#ff000000"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <Switch
                android:id="@+id/sound_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/switch_sound"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            </RelativeLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:layout_marginBottom="150dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/resumeButton"
                android:text="@string/button_resume"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/button_shape_layout_selector"
                android:clickable="false"
                android:textColor="#ff000000"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/restartButton"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/restartButton"
                android:text="@string/button_restart"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/button_shape_layout_selector"
                android:clickable="false"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="#ff000000"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@+id/resumeButton"
                android:layout_alignParentStart="false" />

            <Button
                android:id="@+id/endMenuButton"
                android:text="@string/button_end"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/button_shape_layout_selector"
                android:clickable="false"
                android:enabled="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="#ff000000"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/restartButton"
                android:layout_alignStart="@+id/restartButton"
                android:layout_alignParentStart="false" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
